--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -4,7 +4,7 @@
     border-radius: 0;
     /* `otf-font-awesome` is required to be installed for icons */
     font-family: JetBrainsMono Nerd Font;
-    font-size: 13px;
+    font-size: 12px;
     min-height: 0;
 }
 
@@ -43,26 +43,26 @@ window#waybar.chromium {
 
 #workspaces {
     padding-right: 12px;
+        padding-left: 6px;
 }
+
 #workspaces button {
-    padding: 0 10px;
-    background-color: #32302f;
+    padding: 0;
     color: #d4be98;
-    border-radius: 100px;
     /* Use box-shadow instead of border so the text isn't offset */
     box-shadow: inset 0 -1px transparent;
-    margin: 4px;
+    padding: 0 4px;
+    font-weight: 100;
 }
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 #workspaces button:hover {
-    background: #4c566a;
     box-shadow: inset 0 -1px #d8dee9;
 }
 
 #workspaces button.focused {
-    background-color: #3b4439;
-    color: #d4be98;
+    color: #89b482;
+    font-weight: 900;
 }
 
 #workspaces button.urgent {
