--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -8,7 +8,7 @@
 }
 
 window#waybar {
-  /* background-color: #1a1a24; */
+  background-color: transparent;
   border-bottom: none;
   color: #a7b7d6;
   transition-property: background-color;
