--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -49,11 +49,6 @@ window#waybar.hidden {
   background-color: #de956f;
 }
 
-#mode {
-  background-color: #64727d;
-  border-bottom: 3px solid #ffffff;
-}
-
 #custom-clock,
 #battery,
 #cpu,
@@ -71,6 +66,10 @@ window#waybar.hidden {
   padding-right: 16px;
   padding-left: 4px;
   color: #2e3440;
+}
+
+#mode {
+  color: #ebb9b9;
 }
 
 #window {
@@ -138,13 +137,11 @@ label:focus {
 }
 
 #custom-media {
-  background-color: #66cc99;
   color: #2a5c45;
-  min-width: 100px;
 }
 
 #custom-media.custom-spotify {
-  background-color: #66cc99;
+  color: #66cc99;
 }
 
 #custom-media.custom-vlc {
