--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -19,7 +19,7 @@ window#waybar {
 }
 
 window#waybar.empty {
-  background-color: transparent;
+  /* background-color: transparent; */
 }
 
 window#waybar.hidden {
